# Quadrature_Encoder

./: .gitignore  CMakeLists.txt  Quadrature_Encoder.c  Quadrature_Encoder.md
App/: Quadrature_Encoder.cpp
HAL/: encoder_config.hpp  encoder_hal.c  encoder_hal.cpp  encoder_hal.h  encoder_hal.hpp
HAL/Encoder/: encoder_config.hpp  encoder_hal.cpp  encoder_hal.hpp
HAL/H_Bridge/: HBridge_config.hpp  HBridge_hal.cpp  HBridge_hal.hpp
Service/: PID.cpp  PID.hpp  encoder_service.c  encoder_service.cpp  encoder_service.h  encoder_service.hpp
Service/Encoder/: MotorPID.hpp  encoder_service.cpp  encoder_service.hpp
Service/Motor/: Motor.cpp  Motor.hpp
Service/PID/: PID.cpp  PID.hpp
